# portfolio-data-service-fastapi

./: .gitignore  Dockerfile  README.md  env_setup.bash  main.py  main.yml  menu_links.json  menu_main.json  pyproject.toml  run.py  skills_tags.json
app/: main.py
app/api_v1/routers/: blog_routers.py  menu_routers.py  projects_routers.py
app/db/: __init__.py
app/db/impl/: mongo_manager.py
app/db/interfaces/: database_manager.py
app/models/: blog.py  blog_models.py  database.py  menu.py  menu_models.py  projects.py  projects_models.py  skills.py  skills_models.py
app/rest/: blog.py  menu.py  projects.py  skills.py
app/routers/: base.py  base_routers.py  blog.py  blog_routers.py  menu_routers.py  projects_routers.py  schemas_routers.py  skills_routers.py
app/services/database_manager/: __init__.py
app/services/database_manager/impl/: mongo_manager.py
app/utils/: common_helper.py  error_handlers.py
portfolio_read/: .gitignore  Dockerfile  README.md  portfolio_read.code-workspace  samconfig.toml  template.yaml
portfolio_read/src/: app.py  base_route.py  base_routers.py  main.py  requirements.txt
portfolio_read/src/api_v1/: api.py
portfolio_read/src/api_v1/routers/: __init__.py  (+5 more)
portfolio_read/src/config/: config.py
portfolio_read/src/models/: blog_models.py  menu_models.py  projects_models.py  skills_models.py
portfolio_read/src/utils/: common_helper.py
src/: lambda_handler.py  requirements.txt  run.py
src/app/: main.py
src/app/api_v1/: api.py
src/app/models/: database_models.py
src/app/utils/: common_helper.py
tests/: api_test.py
(+10 files in other folders)
